; ModuleID = '/home/carl/AnghaBench/mimikatz/mimidrv/extr_kkll_m_modules.c_kkll_m_modules_fromAddr.c'
source_filename = "/home/carl/AnghaBench/mimikatz/mimidrv/extr_kkll_m_modules.c_kkll_m_modules_fromAddr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32 }

@FALSE = common dso_local global i32 0, align 4
@kkll_m_modules_fromAddr_callback = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i32] [i32 48, i32 120, i32 37, i32 112, i32 32, i32 91, i32 32, i32 63, i32 32, i32 93, i32 10, i32 0], align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kkll_m_modules_fromAddr(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %8 = load i32, i32* @FALSE, align 4
  store i32 %8, i32* %7, align 4
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 1
  %10 = load i32, i32* %4, align 4
  store i32 %10, i32* %9, align 4
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  store i32 0, i32* %11, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @kkll_m_modules_fromAddr_callback, align 4
  %14 = call i32 @kkll_m_modules_enum(i32 0, i32* null, i32 %12, i32 %13, %struct.TYPE_3__* %5)
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i64 @NT_SUCCESS(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %26

18:                                               ; preds = %2
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %26, label %22

22:                                               ; preds = %18
  %23 = load i32, i32* %3, align 4
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @kprintf(i32 %23, i8* bitcast ([12 x i32]* @.str to i8*), i32 %24)
  store i32 %25, i32* %6, align 4
  br label %26

26:                                               ; preds = %22, %18, %2
  %27 = load i32, i32* %6, align 4
  ret i32 %27
}

declare dso_local i32 @kkll_m_modules_enum(i32, i32*, i32, i32, %struct.TYPE_3__*) #1

declare dso_local i64 @NT_SUCCESS(i32) #1

declare dso_local i32 @kprintf(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
